updated href for contact page

--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
         <div id="nav-2">
             <ul>
                 <li>
-                    <a href="faq.html">CONTACT</a>
+                    <a href="contact.html">CONTACT</a>
                 </li>
                 <li>
                     <a href="pricing.html">PLANS AND PRICING</a>
